--- a/Stories.scriv/Settings/ui.plist
+++ b/Stories.scriv/Settings/ui.plist
@@ -6,8 +6,8 @@
 	<real>1</real>
 	<key>binderSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {265, 1161}}</string>
-		<string>{{266, 0}, {1654, 1161}}</string>
+		<string>{{0, 0}, {175, 970}}</string>
+		<string>{{176, 0}, {1504, 970}}</string>
 	</array>
 	<key>bookmarksSelectionInfo</key>
 	<dict>
@@ -119,17 +119,37 @@
 		<key>SupportingID</key>
 		<string></string>
 	</dict>
+	<key>editorSplitFrames</key>
+	<array>
+		<string>{{872, 0}, {872, 1090}}</string>
+	</array>
+	<key>fullScreenBackgroundFade</key>
+	<real>1</real>
+	<key>fullScreenHorizontalPaperPosition</key>
+	<integer>2</integer>
+	<key>fullScreenInspectorMode</key>
+	<integer>0</integer>
+	<key>fullScreenInspectorVisible</key>
+	<false/>
+	<key>fullScreenPaperHeight</key>
+	<integer>-1</integer>
+	<key>fullScreenPaperWidth</key>
+	<integer>850</integer>
 	<key>fullScreenTextEditorSettings</key>
 	<dict>
 		<key>textScaleFactor</key>
 		<real>1.25</real>
 	</dict>
+	<key>fullScreenVerticalPaperPosition</key>
+	<integer>2</integer>
 	<key>inspectorSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {384, 644}}</string>
+		<string>{{0, 0}, {384, 1110}}</string>
 	</array>
 	<key>inspectorWidth</key>
 	<real>245</real>
+	<key>lastDocumentSplitType</key>
+	<integer>1</integer>
 	<key>mainDocumentEditor.PDFAutoScales</key>
 	<false/>
 	<key>mainDocumentEditor.dockedQRTextSettings</key>
@@ -138,21 +158,21 @@
 		<real>1</real>
 	</dict>
 	<key>mainDocumentEditor.scrollRect</key>
-	<string>{{0, 655}, {620, 1075}}</string>
+	<string>{{0, 0}, {620, 1034}}</string>
 	<key>mainDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
 		<real>1</real>
 	</dict>
 	<key>mainWindowFrame</key>
-	<string>0 31 901 1144 0 0 1920 1175 </string>
+	<string>0 31 1680 994 -1680 0 1680 1025 </string>
 	<key>supportingDocumentEditor.dockedQRTextSettings</key>
 	<dict>
 		<key>textScaleFactor</key>
 		<real>1</real>
 	</dict>
 	<key>supportingDocumentEditor.scrollRect</key>
-	<string>{{0, 0}, {606, 294}}</string>
+	<string>{{0, 0}, {620, 884}}</string>
 	<key>supportingDocumentEditor.textEditorState</key>
 	<dict>
 		<key>textScaleFactor</key>
